<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dlg_edit_item_ll_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/dlg_edit_item_ll_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="0.2"
            android:padding="3dp"
            android:text="@string/dlg_edit_item_bm_title"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/dlg_edit_item_et_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="1.0"
            android:ems="10"
            android:gravity="top|left"
            android:inputType="textMultiLine"
            android:lines="3" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="0.2"
            android:padding="3dp"
            android:text="@string/dlg_edit_item_memo"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/dlg_edit_item_et_memo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="1.0"
            android:ems="10"
            android:gravity="top|left"
            android:inputType="textMultiLine"
            android:lines="3" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp" >

        <Button
            android:id="@+id/dlg_edit_item_bt_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:padding="3dp"
            android:text="@string/generic_bt_ok"
            android:textSize="25sp" />

        <Button
            android:id="@+id/dlg_edit_item_bt_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:padding="3dp"
            android:text="@string/generic_bt_cancel"
            android:textColor="@color/red"
            android:textSize="25sp" />
    </LinearLayout>

</LinearLayout>