<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical" >

    <TextView
        android:id="@+id/actv_play_tv_file_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:text="@string/generic_tv_no_data"
        android:textColor="@color/black"
        android:textSize="25dp" />

    <ScrollView
        android:id="@+id/actv_play_sv_title"

		android:layout_width="match_parent"
        android:layout_height="wrap_content"

		android:layout_marginTop="10dp"
		android:layout_marginBottom="10dp"
		
		android:layout_marginLeft="5dp"
		android:layout_marginRight="5dp"

		android:layout_weight="1" >

        <TextView
            android:id="@+id/actv_play_tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="left|top"
            android:lines="2"
            android:text="@string/generic_tv_no_data"
            android:textColor="@color/black"
            android:textSize="25dp" />

    </ScrollView>

    <ScrollView
        android:id="@+id/actv_play_sv_memo"

		android:layout_width="match_parent"
        android:layout_height="wrap_content"

		android:layout_marginTop="10dp"
		android:layout_marginBottom="10dp"
		
		android:layout_marginLeft="5dp"
		android:layout_marginRight="5dp"

		android:layout_weight="1"
		>

        <TextView
            android:id="@+id/actv_play_tv_memo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="left|top"
            android:lines="3"
            android:text="@string/generic_tv_no_data"
            android:textColor="@color/black"
            android:textSize="25dp" />
        
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
		android:layout_height="wrap_content"
        
        
        
		android:layout_marginTop="5dp"
		android:layout_marginBottom="5dp"
		
		android:layout_marginLeft="5dp"
		android:layout_marginRight="5dp"
			
        android:gravity="center"
        
        android:background="@color/green4"
        >

        <Button
            android:id="@+id/actv_play_bt_add_bm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:padding="3dp"
            android:text="@string/actv_play_bt_add_bm"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="22sp" />

        <Button
            android:id="@+id/actv_play_bt_see_bm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:padding="3dp"
            android:text="@string/actv_play_bt_see_bm"
            android:textColor="@color/black"
            android:textSize="22sp" />
        
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:gravity="center_horizontal" >

        <SeekBar
            android:id="@+id/actv_play_sb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:layout_weight="15" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/actv_play_tv_current_position"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:background="@color/white"
                android:padding="2dp"
                android:text="00:00"
                android:textColor="@color/black"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/actv_play_tv_length"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:background="@color/white"
                android:gravity="center"
                android:padding="2dp"
                android:text="00:00"
                android:textColor="@color/black"
                android:textSize="22sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
		android:layout_height="wrap_content"
        
        
        
		android:layout_marginTop="5dp"
		android:layout_marginBottom="5dp"
		
		android:layout_marginLeft="5dp"
		android:layout_marginRight="5dp"
			
        android:gravity="center"
        
        android:background="@color/green4"
        >

        <Button
            android:id="@+id/actv_play_bt_play"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

			android:layout_marginTop="10dp"
			android:layout_marginBottom="10dp"
			
			android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp"

            android:text="@string/actv_play_bt_play"
			android:textSize="25dp"
			
			android:textColor="@color/blue1"
            
            
		 />

        <Button
            android:id="@+id/actv_play_bt_stop"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

			android:layout_marginTop="10dp"
			android:layout_marginBottom="10dp"
			
			android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp"

            android:text="@string/actv_play_bt_stop"
			android:textSize="25dp"
			
			android:textColor="@color/red"
		 />

        <Button
            android:id="@+id/actv_play_bt_back"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

			android:layout_marginTop="10dp"
			android:layout_marginBottom="10dp"
			
			android:layout_marginLeft="10dp"
			android:layout_marginRight="10dp"

            android:text="@string/generic_bt_back"
            android:textSize="25dp"
		 />

    </LinearLayout>

</LinearLayout>